Modify Final project files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Testing codes
 /8-Machine_Learning_with_Python/5 Recommendation Systems/moviedataset.zip
 /8-Machine_Learning_with_Python/5 Recommendation Systems/ml-latest
+/.ipynb_checkpoints
